Better code formatting for readability